# DTU-MLops-project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  cookiecutter.json  load_from_env_file.py  pyproject.toml  tasks.py
.github/agents/: dtu_mlops_agent.md
.github/workflows/: linting.yaml  tests.yaml
configs/: advance_uv_config.yaml  cloudbuild.yaml  config.yaml  defaults.yaml  sweep.yaml
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
hooks/: post_gen_project.py
reports/: README.md
src/mlops/: api.py  data.py  evaluate.py  frontend.py  model.py  train.py
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20260115_095705-nnhe3xss/: run-nnhe3xss.wandb
wandb/run-20260115_095705-nnhe3xss/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_095859-wehpltd6/: run-wehpltd6.wandb
wandb/run-20260115_095859-wehpltd6/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_100254-z3xzrf73/: run-z3xzrf73.wandb
wandb/run-20260115_100254-z3xzrf73/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_100634-7rvtbj6m/: run-7rvtbj6m.wandb
wandb/run-20260115_100634-7rvtbj6m/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260115_100659-kwl4ohwe/: run-kwl4ohwe.wandb
wandb/run-20260115_100659-kwl4ohwe/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_102039-iscy4aeb/: run-iscy4aeb.wandb
wandb/run-20260115_102039-iscy4aeb/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+4 files in other folders)
