[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group 48", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "google-api-python-client>=2.188.0",
    "google-cloud-storage>=3.8.0",
    "google-cloud-run>=0.14.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "kagglehub>=0.4.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "streamlit>=1.53.0",
    "torch==2.6.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.14.13",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
